web/fix: button inner gap

--- a/packages/web/styles/components/social-button.css
+++ b/packages/web/styles/components/social-button.css
@@ -2,8 +2,4 @@
   &--google {
     border: 0.87px solid var(--mantine-google-icon-border-color);
   }
-
-  &__inner {
-    gap: var(--mantine-spacing-md);
-  }
 }
